backend/internal/architecture/testdata/invalid/internal/modules/bad/universal_api.go
package bad

// ContentAPI demonstrates a forbidden universal protocol interface.
type ContentAPI interface{ Everything() }
